[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/characters/maria-walk.png" type="Texture" id=1]
[ext_resource path="res://assets/characters/GhostWillySprites-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Player.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Minecraftia-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/characters/maria-idle.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "ghost",
"speed": 6.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "maria_walking",
"speed": 8.5
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "maria_idle",
"speed": 8.5
} ]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 8, 8 )

[sub_resource type="DynamicFont" id=16]
size = 8
outline_size = 1
outline_color = Color( 0.0705882, 0.0666667, 0.0666667, 1 )
use_mipmaps = true
font_data = ExtResource( 4 )

[sub_resource type="CapsuleShape2D" id=17]
radius = 11.8607
height = 7.51727

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -16, -29 )
frames = SubResource( 14 )
animation = "maria_walking"
frame = 1
playing = true
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 15 )

[node name="PlayerName" type="Label" parent="."]
margin_left = -32.0
margin_top = -40.0
margin_right = 32.0
margin_bottom = -24.0
custom_fonts/font = SubResource( 16 )
text = "Player"
align = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -8 )
process_mode = 0
smoothing_enabled = true
smoothing_speed = 3.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="RClickTimer" type="Timer" parent="."]
one_shot = true

[node name="RClickFeedback" type="Label" parent="."]
margin_left = -42.0
margin_right = 42.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 16 )
text = "oooooo..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RClickDuration" type="Timer" parent="."]
one_shot = true

[node name="ItemArea" type="Area2D" parent="."]
position = Vector2( 0, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemArea"]
position = Vector2( 0, -3.42045 )
shape = SubResource( 17 )
[connection signal="body_entered" from="ItemArea" to="." method="_on_ItemArea_body_entered"]
[connection signal="body_exited" from="ItemArea" to="." method="_on_ItemArea_body_exited"]
